force-app/main/default/objects/PMTrade__c/PMTrade__c.object-meta.xml
<CustomObject>
    <description>贵金属交易</description>
    <label>PMTrade</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>PMTrade NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMTrade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>