force-app/main/default/objects/PMTrade__c/fields/CloseAmount__c.field-meta.xml
<CustomField>
    <fullName>CloseAmount__c</fullName>
    <formula>ClosePrice__c*Gram__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>