force-app/main/default/objects/PMTrade__c/fields/ClosePositionDate__c.field-meta.xml
<CustomField>
    <fullName>ClosePositionDate__c</fullName>
    <description>平仓日期</description>
    <label>Close Position Date</label>
    <type>Date</type>
</CustomField>