force-app/main/default/objects/PMTrade__c/fields/Gram__c.field-meta.xml
<CustomField>
    <fullName>Gram__c</fullName>
    <label>Gram</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>