force-app/main/default/objects/PMTrade__c/fields/OpenAmount__c.field-meta.xml
<CustomField>
    <fullName>OpenAmount__c</fullName>
    <formula>OpenPrice__c*Gram__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>