force-app/main/default/objects/PMTrade__c/fields/OpenPositionDate__c.field-meta.xml
<CustomField>
    <fullName>OpenPositionDate__c</fullName>
    <description>开仓日期</description>
    <label>Open Position Date</label>
    <type>Date</type>
</CustomField>