force-app/main/default/objects/PMTrade__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>父级</description>
    <label>Parent</label>
    <referenceTo>PMTrade__c</referenceTo>
    <relationshipName>Parent</relationshipName>
    <type>Lookup</type>
</CustomField>