force-app/main/default/objects/PMTrade__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <description>获利</description>
    <formula>IF(TEXT(Status__c)=='Closed',(ClosePrice__c - OpenPrice__c) * Gram__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>